aggiunta tabella Genres con Seeder, index ed edit

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,8 @@
 // Partials
 @import "Partials/_index.scss";
 @import "Partials/_index-authors.scss";
+@import "Partials/_index-genres.scss";
+@import "Partials/_edit-genres.scss";
 
 
 // Page settings
