--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17109,6 +17109,38 @@ readers do not read off random characters that represent icons */
   right: 10px;
 }
 
+#genres-index-wrapper {
+  padding: 30px;
+  width: 60%;
+  margin: auto;
+}
+
+#genres-index-wrapper h1 {
+  text-align: center;
+  padding: 20px;
+  font-weight: 700;
+}
+
+#genres-index-wrapper table tbody {
+  background-color: #fff;
+}
+
+#genres-index-wrapper table tbody .edit {
+  width: 150px;
+}
+
+#genres-index-wrapper table tbody .delete {
+  width: 150px;
+}
+
+#genres-index-wrapper table tbody .fa-trash-alt {
+  color: red;
+}
+
+#edit-genres-wrapper {
+  padding: 30px 0;
+}
+
 body {
   background-color: #b4adb4;
   font-family: "Lato", sans-serif;
